Fix player name alignment.

--- a/components/RealTimeCanvas/Cursor.module.css
+++ b/components/RealTimeCanvas/Cursor.module.css
@@ -13,6 +13,7 @@
   filter: var(--stroke-shadow);
 }
 
+/** not editing */
 .cursor_arrow {
   --offset-x: -3px;
   --offset-y: -2px;
@@ -37,9 +38,9 @@
   --offset-y: -50%;
 
   & .labelWrap {
-    /* left bottom corner of the icon with slight offset */
-    top: calc(100% + 8px);
-    left: 0;
+    top: calc(100% + 16px);
+    left: 50%;
+    transform: translateX(-50%);
   }
 }
 
